# NEW-PROJECT

./: README.md
nft_marketplace/: .gitignore  Cargo.toml  README.md
nft_marketplace/frontend/: index.html  package-lock.json  package.json
nft_marketplace/frontend/src/: App.module.css  App.tsx  index.css
nft_marketplace/frontend/src/components/: Footer.tsx  Navbar.tsx
nft_marketplace/frontend/src/components/Footer/: Footer.module.css  Footer.tsx
nft_marketplace/frontend/src/components/NFTCard/: NFTCard.module.css  NFTCard.tsx
nft_marketplace/frontend/src/components/Navbar/: Navbar.module.css  Navbar.tsx
nft_marketplace/frontend/src/pages/: CreateListing.tsx  Home.tsx  Marketplace.module.css  Marketplace.tsx  MyListings.tsx
nft_marketplace/frontend/src/pages/CreateListing/: CreateListing.module.css  CreateListing.tsx
nft_marketplace/frontend/src/pages/Home/: Home.module.css  Home.tsx
nft_marketplace/frontend/src/pages/MarketPlace/: Marketplace.module.css  Marketplace.tsx
nft_marketplace/frontend/src/pages/MyListings/: MyListings.module.css  MyListings.tsx
nft_marketplace/programs/anchor-nft-marketplace/: Cargo.toml
nft_marketplace/programs/anchor-nft-marketplace/src/: error.rs  event.rs  lib.rs
nft_marketplace/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs
nft_marketplace/src/instructions/: delist_nft.rs  initialize_marketplace.rs  list_nft.rs  mod.rs  purchase_nft.rs  update_fee.rs
nft_marketplace/src/state/: listing.rs  marketplace.rs
nft_marketplace/tests/: initialize_marketplace.rs  update_fee.rs
(+30 files in other folders)
