cargo-features = ["edition2024"]

[package]
name = "native-nft-marketplace"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
sha2 = "0.10"
borsh = "1.5.1"
solana-program = "2.2.1"
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "8.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "6.0.0", features = ["no-entrypoint"] }
thiserror = "1.0.64"

[dev-dependencies]
solana-program-test = "2.2.1"
solana-sdk = "2.2.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.release]
overflow-checks = true
